--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
