--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "cra-template": "1.1.2",
     "google-map-react": "^2.1.10",
     "install": "^0.13.0",
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "sass": "^1.45.0",
     "yup": "^0.32.11"
   },
