--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "google-map-react": "^2.1.10",
     "install": "^0.13.0",
