--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/google-map-react": "^2.1.4",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
