--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@types/google-map-react": "^2.1.4",
     "@types/jest": "^27.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
