--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
     "@types/jest": "^27.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.13",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "google-map-react": "^2.1.10",
     "install": "^0.13.0",
     "npm": "^8.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0-next-e531a4a62-20220505",
+    "react-dom": "^18.2.0-next-e531a4a62-20220505",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
@@ -57,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.3",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
