--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
+    "@react-google-maps/api": "^2.10.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/google-map-react": "^2.1.5",
     "@types/jest": "^27.4.0",
@@ -19,8 +20,8 @@
     "google-map-react": "^2.1.10",
     "install": "^0.13.0",
     "npm": "^8.3.0",
-    "react": "^18.2.0-next-e531a4a62-20220505",
-    "react-dom": "^18.2.0-next-e531a4a62-20220505",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
