--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-  
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -60,6 +60,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.3",
     "autoprefixer": "^9.8.8",
+    "concurrently": "^7.2.2",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^2.1.2"
