--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^27.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.13",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
@@ -22,11 +23,12 @@
     "npm": "^8.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.0-beta.1",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
     "typescript": "^4.5.5",
     "yup": "^0.32.11"
