--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
-    "typescript": "^4.5.5",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -59,12 +58,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.3",
+    "@types/reach__router": "^1.3.10",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^9.8.8",
     "concurrently": "^7.2.2",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.2"
   }
 }
