--- a/package.json
+++ b/package.json
@@ -3,33 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.3",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/material": "^5.2.3",
-    "@mui/styles": "^5.2.3",
-    "@react-google-maps/api": "^2.10.2",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/google-map-react": "^2.1.5",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.5.2",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.13",
+    "@types/node": "^16.11.45",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
-    "google-map-react": "^2.1.10",
     "install": "^0.13.0",
     "npm": "^8.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.0-beta.1",
-    "react-responsive-carousel": "^3.2.22",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -56,16 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/reach__router": "^1.3.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^9.8.8",
-    "concurrently": "^7.2.2",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.2"
   }
 }
