--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@react-google-maps/api": "^2.12.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/jest": "^27.5.2",
     "@types/mongoose": "^5.11.97",
@@ -10,18 +15,19 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
-    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "install": "^0.13.0",
     "npm": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
