--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.9.1",
     "@react-google-maps/api": "^2.12.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/jest": "^27.5.2",
@@ -21,6 +22,7 @@
     "npm": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
